Closed Bug 615323 Opened 14 years ago Closed 13 years ago

warning: comparison between signed and unsigned integer expressions in xpcjsruntime.cpp

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla5

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

js/src/xpconnect/src/xpcjsruntime.cpp:
 In static member function ‘static void XPCJSRuntime::WatchdogMain(void*)’:
862: warning: comparison between signed and unsigned integer expressions
 In member function ‘JSBool XPCJSRuntime::OnJSContextNew(JSContext*)’:
1318: warning: comparison between signed and unsigned integer expressions

- PR_USEC_PER_SEC is unsigned, PR_Now() is signed (PRTime)
- PR_GetPhysicalMemorySize returns PRUint64 not PRInt64
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #493780 - Flags: review?(mrbkap)
Attachment #493780 - Flags: approval2.0?
Attachment #493780 - Flags: review?(mrbkap) → review+
Comment on attachment 493780 [details] [diff] [review]
patch

Mass minusing patch approval that don't have high return. Please renominate if this is more important for 2.0 than it appears.
Attachment #493780 - Flags: approval2.0? → approval2.0-
http://hg.mozilla.org/mozilla-central/rev/a52e34d1bb4e
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: