Bug 615323 warning: comparison between signed and unsigned integer expressions in xpcjsruntime.cpp r=mrbkap